--- a/CsvReader/appsettings.json
+++ b/CsvReader/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServerConnection": "Server=localhost\\SQLExpress;Database=ProductsDb5;TrustServerCertificate=true;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SqlServerConnection": "Server=localhost\\SQLExpress;Database=ProductsDb;TrustServerCertificate=true;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
